# wikt

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs  wiktionary_dump.rs
