[package]
name = "wikt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
bzip2 = { version = "0.4", features = ["tokio"] }
roxmltree ={ version = "0.19.0" }
pprof = { version = "0.13", features = ["flamegraph"] }
regex = { version = "1.10.4" }